# gbpcli

./: .gitignore  LICENSE  Makefile  README.md  noxfile.py  pyproject.toml  setup.cfg
scripts/: make_queries.py
src/gbpcli/: __init__.py  __main__.py  colormap.py  config.py  django_settings.py  gbp.py  graphql.py  queries.py  render.py  settings.py  theme.py  types.py  utils.py
src/gbpcli/queries/: build.graphql  builds.graphql  builds_with_packages.graphql  create_note.graphql  diff.graphql  diff_stat.graphql  keep_build.graphql  latest.graphql  logs.graphql  machine_names.graphql  machines.graphql  packages.graphql  publish.graphql  pull.graphql  release_build.graphql  resolve_tag.graphql  schedule_build.graphql  search.graphql  search_notes.graphql  tag_build.graphql  untag_build.graphql
src/gbpcli/subcommands/: __init__.py  build.py  completers.py  diff.py  inspect.py  keep.py  latest.py  list.py  logs.py  machines.py  notes.py  packages.py  publish.py  pull.py  show.py  status.py  tag.py
tests/: __init__.py  __main__.py  fixtures.py  lib.py  test_build.py  test_completers.py  test_config.py  test_diff.py  test_entrypoint.py  test_gbp.py  test_graphql.py  test_inspect.py  test_keep.py  test_latest.py  test_list.py  test_logs.py  test_machines.py  test_notes.py  test_packages.py  test_publish.py  test_pull.py  test_render.py  test_settings.py  test_show.py  test_status.py  test_tag.py  test_theme.py  test_utils.py
tests/data/: create_note.json  diff.json  diff_no_content.json  inspect.ndjson  keep_build.json  latest.json  lighthouse.12672.json  list.json  list_with_packages.json  logs.json  machines.json  machines_filtered.json  packages-b.json  packages-b.txt  packages.json  packages.txt  publish.json  pull.json  release_build.json  schedule_build.json  search_notes.json  show.json  status.json  tag_build.json  untag_build.json
