[project]
name = "gbpcli"
dynamic = ["version"]
description = "Gentoo Build Publisher Command-Line Interface"
readme = "README.md"
authors = [{name = "Albert Hopkins", email = "marduk@letterboxes.org"}]
license = {text = "GPL3+"}
dependencies = [
    "argcomplete>=3.2.1",
    "requests",
    "rich>=12.5.1",
    "yarl",
    "platformdirs>=4.2.0",
]
requires-python = ">=3.11"
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Software Distribution",
    "Programming Language :: Python :: 3",
]

[project.urls]
homepage = "https://github.com/enku/gbpcli"
repository = "https://github.com/enku/gbpcli"

[project.scripts]
gbp = "gbpcli:main"

[project.entry-points."gbpcli.subcommands"]
build = "gbpcli.subcommands.build"
diff = "gbpcli.subcommands.diff"
inspect = "gbpcli.subcommands.inspect"
keep = "gbpcli.subcommands.keep"
latest = "gbpcli.subcommands.latest"
list = "gbpcli.subcommands.list"
logs = "gbpcli.subcommands.logs"
machines = "gbpcli.subcommands.machines"
notes = "gbpcli.subcommands.notes"
packages = "gbpcli.subcommands.packages"
publish = "gbpcli.subcommands.publish"
pull = "gbpcli.subcommands.pull"
status = "gbpcli.subcommands.status"
tag = "gbpcli.subcommands.tag"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
version = { source = "scm" }

[tool.pdm.dev-dependencies]
dev = [
    "black",
    "coverage",
    "mypy==1.7.1",  # Pin until mypy/issues/16400 is resolved
    "pylint",
    "types-requests",
    "types-toml>=0.10.8.7",
]

[tool.black]
skip-magic-trailing-comma = true

[tool.coverage.run]
source = ["gbpcli"]
omit = ["src/gbpcli/__main__.py"]

[tool.flake8]
max-line-length = 88

[tool.pylint.master]
init-hook = "import sys; sys.path.insert(0, 'tests')"
ignore-imports = "yes"

[tool.isort]
profile = "black"
