[metadata]
name = gbpcli
description = Gentoo Build Publisher Command-Line Interface
include_package_data = True
author = Albert Hopkins
author_email = marduk@letterboxes.org

[options]
zip_safe = True
packages = find:
package_dir =
    =src

install_requires =
    requests~=2.25.1
    yarl~=1.6.3

[options.entry_points]
console_scripts =
    gbp = gbpcli:main

gbpcli.subcommands =
    build = gbpcli.subcommands.build
    diff = gbpcli.subcommands.diff
    keep = gbpcli.subcommands.keep
    latest = gbpcli.subcommands.latest
    list = gbpcli.subcommands.list
    logs = gbpcli.subcommands.logs
    machines = gbpcli.subcommands.machines
    packages = gbpcli.subcommands.packages
    publish = gbpcli.subcommands.publish
    pull = gbpcli.subcommands.pull
    show = gbpcli.subcommands.show

[options.packages.find]
where = src

[flake8]
max-line-length = 88

[pylint.master]
init-hook = import sys; sys.path.insert(0, "tests")
ignore-imports=yes
